--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource-variable/jetbrains-mono": "^5.0.19",
+    "@vercel/analytics": "^1.2.2",
     "next": "^14.1.1",
     "react": "^18",
     "react-dom": "^18",
